add category and add person views

--- a/Web-Homework/Views/Category/Index.cshtml
+++ b/Web-Homework/Views/Category/Index.cshtml
@@ -35,7 +35,7 @@
             </tr>
         }
     </table>
-    <a href="#" class="btn btn-primary">New Category</a>
+    <a href="/Category/AddCategory/" class="btn btn-primary">New Category</a>
 
 </body>
 </html>
