--- a/Web-Homework/Views/Person/Index.cshtml
+++ b/Web-Homework/Views/Person/Index.cshtml
@@ -26,7 +26,7 @@
             <td>Person Phone</td>
             <td>Person E-mail</td>
             <td>Category Name</td>
-            <td>Delete</td> 
+            <td>Delete</td>
             <td>Update</td>
         </tr>
         @foreach (var item in Model)
@@ -43,7 +43,7 @@
             </tr>
         }
     </table>
-    <a href="#" class="btn btn-primary">New Person</a>
+    <a href="/Person/AddPerson" class="btn btn-primary">New Person</a>
 
 </body>
 </html>
