fix foreign key conflict

--- a/Web-Homework/Views/Person/AddPerson.cshtml
+++ b/Web-Homework/Views/Person/AddPerson.cshtml
@@ -35,9 +35,7 @@
         @Html.TextBoxFor(person => person.ImageUrl, new { @class = "form-control" })
         <br />
         @Html.LabelFor(person => person.Category)
-        @Html.TextBoxFor(person => person.CategoryID, new { @class = "form-control" })
-        @*@Html.LabelFor(person => person.Category)
-            @Html.DropDownListFor(person => person.CategoryID, (List<SelectListItem>)ViewBag.listItemsBag, new { @class = "form-control" })*@
+        @Html.DropDownListFor(person => person.CategoryID, (List<SelectListItem>)ViewBag.listItemsBag, new { @class = "form-control" })
         <br />
         <button class="btn btn-success">Save</button>
     }
