--- a/Web-Homework/Views/Person/Index.cshtml
+++ b/Web-Homework/Views/Person/Index.cshtml
@@ -38,7 +38,7 @@
                 <td>@item.PersonPhone</td>
                 <td>@item.PersonEmail</td>
                 <td>@item.Category.CategoryName</td>
-                <td><a href="#" class="btn btn-danger">Delete</a></td>
+                <td><a href="/Person/DeletePerson/@item.PersonID" class="btn btn-danger">Delete</a></td>
                 <td><a href="#" class="btn btn-success">Update</a></td>
             </tr>
         }
