--- a/Web-Homework/Views/Person/Index.cshtml
+++ b/Web-Homework/Views/Person/Index.cshtml
@@ -41,7 +41,7 @@
                 <td>@item.PersonSurname</td>
                 <td>@item.PersonPhone</td>
                 <td>@item.PersonEmail</td>
-                <td>@item.Category.CategoryName</td>
+                <td>@item.PersonCategory.PersonCategoryName</td>
                 <td><a href="/Person/DeletePerson/@item.PersonID" class="btn btn-danger">Delete</a></td>
                 <td><a href="/Person/GetPerson/@item.PersonID" class="btn btn-success">Update</a></td>
             </tr>
