add filtered menu

--- a/Web-Homework/Views/Login/Index.cshtml
+++ b/Web-Homework/Views/Login/Index.cshtml
@@ -23,25 +23,28 @@
     <section class="vh-100 d-flex justify-content-center align-items-center h-100">
         <div class="container-fluid h-custom">
             <div class="d-flex flex-column justify-content-center align-items-center h-100">
-                <div class="col-md-9 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
-                    <img src="https://cengage.force.com/resource/1607465003000/loginIcon"
-                         class="img-fluid w-50" alt="Sample image">
-                </div>
+
                 <div class="col-md-8 col-lg-6 col-xl-4">
-                    <form class="border p-5" method="post" action="~/Login/Index/">
+                    <form class="border p-4" method="post" action="~/Login/Index/">
+                        <div class="d-flex p-3">
+                            <img src="https://cengage.force.com/resource/1607465003000/loginIcon"
+                                 class="img-fluid w-50 m-auto" alt="Sample image">
+                        </div>
                         <h2>Dormitory Login Panel</h2>
                         <!-- Email input -->
-                        <div class="form-outline mb-4">
+                        <div class=" mb-4">
+                            <label class="form-label" for="form3Example3">Email address</label>
+
                             <input name="Email" type="email" id="form3Example3" class="form-control form-control-lg"
                                    placeholder="Enter a valid email address" />
-                            <label class="form-label" for="form3Example3">Email address</label>
                         </div>
 
                         <!-- Password input -->
-                        <div class="form-outline mb-3">
+                        <div class=" mb-3">
+                            <label class="form-label" for="form3Example4">Password</label>
+
                             <input name="Password" type="password" id="form3Example4" class="form-control form-control-lg"
                                    placeholder="Enter password" />
-                            <label class="form-label" for="form3Example4">Password</label>
                         </div>
 
                         <div class="d-flex justify-content-between align-items-center">
