--- a/Web-Homework/Views/PersonCategory/Index.cshtml
+++ b/Web-Homework/Views/PersonCategory/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Category Page";
-    Layout = "~/Views/Shared/_Layout.cshtml"; ;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -35,7 +35,7 @@
             </tr>
         }
     </table>
-    <a href="/Category/AddPersonCategory/" class="btn btn-primary">New Category</a>
+    <a href="/PersonCategory/AddPersonCategory/" class="btn btn-primary">New Category</a>
 
 </body>
 </html>
