--- a/Web-Homework/Views/Person/GetPerson.cshtml
+++ b/Web-Homework/Views/Person/GetPerson.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Person Page";
-    Layout = "~/Views/Shared/_Layout.cshtml"; ;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
