--- a/Web-Homework/Views/Shared/_CategoryLayout.cshtml
+++ b/Web-Homework/Views/Shared/_CategoryLayout.cshtml
@@ -12,7 +12,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand border-left-1" asp-area="" asp-controller="Home" asp-action="Index">Dormitory Management System</a>
+                <img src="https://kygm.gsb.gov.tr/assets/img/kygmlogo-2019.svg" class="w-25" />
+                <a class="navbar-brand border-left-1" asp-area="" asp-controller="Home" asp-action="Index">KYK Muhammed Fatih Safitürk Öğrenci Yurdu</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
