--- a/Web-Homework/Views/Shared/_Layout.cshtml
+++ b/Web-Homework/Views/Shared/_Layout.cshtml
@@ -7,52 +7,85 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Web_Homework.styles.css" asp-append-version="true" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/grandesign-neue-roman" rel="stylesheet">
+
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            color: #2b2d42;
+            background-color: #edf2f4;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: inherit;
+            font-family: 'Montserrat', sans-serif;
+            font-style: normal;
+            font-size: 18px;
+            text-decoration: none;
+            color: #2b2d42;
+            background-color: #edf2f4;
+        }
+
+        .link:hover {
+            opacity: 0.8;
+        }
+    </style>
 </head>
-<body>
+<body class="p-0">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 p-0">
             <div class="container-fluid">
-                <a class="navbar-brand border-left-1" asp-area="" asp-controller="Home" asp-action="Index">Dormitory Management System</a>
+                <img src="https://kygm.gsb.gov.tr/assets/img/kygmlogo-2019.svg" style="width:200px; height:100px" />
+
+                <a asp-area="" asp-controller="Home" asp-action="Index" style="color: #2b2d42; margin-left:8px; text-decoration: none; font-size: 22px; font-family: 'Grandesign Neue Roman', sans-serif; "><img src="https://i.hizliresim.com/swd3eyd.png" style="width:200px; height:30px" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between mx-3">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="PersonCategory" asp-action="Index">Category</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Person</a>
-                            </li>
-
-                        }
-                    </ul>
-                    <ul class="navbar-nav text-right">
+                <div class="navbar-collapse collapse" style="display:flex;flex-direction:row-reverse;margin-right:20px">
+                    <ul class="navbar-nav">
                         @if (!User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item ml-auto">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Admin Panel Login</a>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Index">Admin Panel Login</a>
                             </li>
 
                         }
                         else
                         {
-                            <li class="nav-item ml-auto">
-                                <a class="nav-link text-dark text-decoration-underline">Hello Admin</a>
+                            <li class="nav-item" style="display:flex;align-items:center;">
+                                <span class="material-symbols-outlined" style="color: #DB0032">
+                                    arrow_right_alt
+                                </span>
+                                <a class="nav-link text-decoration-underline">Hello Admin</a>
                             </li>
                         }
 
-
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item ml-auto">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a>
+
+                            <li class="nav-item mx-3">
+                                <a class="nav-link" asp-area="" asp-controller="PersonCategory" asp-action="Index">Category Panel</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link" asp-area="" asp-controller="Person" asp-action="Index">Person Panel</a>
+                            </li>
+                            <li class="nav-item" style="display:flex;align-items:center;">
+                                <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a>
+                                <span class="material-symbols-outlined" style="color: #DB0032">
+                                    logout
+                                </span>
                             </li>
                         }
 
@@ -60,6 +93,26 @@
                 </div>
             </div>
         </nav>
+        <ul class="navbar-nav flex-grow-1 text-center" style="display: flex; flex-direction: row; justify-content: center; align-items: center; margin-bottom:20px;">
+            <li class="nav-item mx-3 " style="display:flex;align-items:center;">
+                <span class="material-symbols-outlined">
+                    home
+                </span>
+                <a class="link" style="font-size: 20px; color: #2b2d42; text-decoration: underline; " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+            </li>
+            <li class="nav-item mx-3">
+                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Announcements</a>
+            </li>
+            <li class="nav-item mx-3">
+                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Gallery</a>
+            </li>
+            <li class="nav-item mx-3">
+                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Activities</a>
+            </li>
+            <li class="nav-item mx-3">
+                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">About Us</a>
+            </li>
+        </ul>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -67,11 +120,6 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Web_Homework - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
