--- a/Web-Homework/wwwroot/css/site.css
+++ b/Web-Homework/wwwroot/css/site.css
@@ -1,18 +1,12 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+    html {
+        font-size: 16px;
+    }
 }
