--- a/Web-Homework/Views/Login/Index.cshtml
+++ b/Web-Homework/Views/Login/Index.cshtml
@@ -35,7 +35,7 @@
                         <div class=" mb-4">
                             <label class="form-label" for="form3Example3">Email address</label>
 
-                            <input name="Email" type="email" id="form3Example3" class="form-control form-control-lg"
+                            <input name="PersonEmail" type="email" id="form3Example3" class="form-control form-control-lg"
                                    placeholder="Enter a valid email address" />
                         </div>
 
