--- a/Web-Homework/Views/Person/GetPerson.cshtml
+++ b/Web-Homework/Views/Person/GetPerson.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Person Page";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -19,9 +19,6 @@
     <h2>Update Person Page</h2>
     @using (Html.BeginForm("UpdatePerson", "Person", FormMethod.Post))
     {
-        @Html.LabelFor(person => person.PersonID)
-        @Html.TextBoxFor(person => person.PersonID, new { @class = "form-control" })
-        <br />
         @Html.LabelFor(person => person.PersonName)
         @Html.TextBoxFor(person => person.PersonName, new { @class = "form-control" })
         <br />
