--- a/Web-Homework/Views/Role/AddRole.cshtml
+++ b/Web-Homework/Views/Role/AddRole.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Role Page";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <!DOCTYPE html>
